add cuda deps in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,15 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 find_package(CUDAToolkit REQUIRED)
 enable_language("CUDA")
+include(CheckLanguage)
+check_language(CUDA)
+include(CudaArchitectures)
+define_cuda_architectures()
+add_compile_definitions(WITH_CUDA)
+if(NOT DEFINED CMAKE_CUDA_STANDARD)
+    set(CMAKE_CUDA_STANDARD 17)
+    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+endif()
 
 include(GreenDeps)
 
