--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ FetchContent_MakeAvailable(Catch2)
 list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 
 add_executable(sc_test sc_test.cpp)
+target_compile_definitions(sc_test PRIVATE TEST_PATH="${CMAKE_CURRENT_SOURCE_DIR}/data")
 target_link_libraries(sc_test
         PRIVATE
         Catch2::Catch2
